reportbug (3.35) unstable; urgency=low

  * Include # of cores for SMP kernels in system information section.

 -- Chris Lawrence <lawrencc@debian.org>  Mon,  2 Apr 2007 11:14:49 -0500

reportbug (3.34.2) unstable; urgency=high

  * Test if the realname is a str or unicode before trying to decode it.
    (Closes: #416883)

 -- Chris Lawrence <lawrencc@debian.org>  Sat, 31 Mar 2007 21:25:05 -0500

reportbug (3.34.1) unstable; urgency=high

  * Decode non-ASCII characters in .reportbugrc rather than trying to
    encode them.  (Closes: #416518)

 -- Chris Lawrence <lawrencc@debian.org>  Wed, 28 Mar 2007 11:11:46 -0500

reportbug (3.34) unstable; urgency=low

  * The "why can't I make Python assume the user is sane and using UTF-8
    instead of 7-bit ASCII" release?
  * Fix check for nonexistent/bogus package names.  (Closes: #407587)
  * Avoid crash with Unicode maintainer names.  (Closes: #409445)
  * Avoid crash with Unicode crap in debconf output.  (Closes: #386659)
  * Fiddle with more Unicode crap in hopes of avoiding crashes.
    (Closes: #407133)
  * Use fancy iterator to avoid caching apt-cache dumpavail and the status
    database.  Downside: more disk thrashing.  Upside: less memory used.
    (Closes: #404249)
  * Urwid UI patches: fix wide buttons and add question marks to yes/no
    prompts.  Thanks to Rafael Laboissiere.  (Closes: #415339, #415340)
  * Kudos go to packages.debian.org directly if smtphost is set to
    bugs.debian.org; we also send all kudos to package@p.d.o.
    (Closes: #412766)

 -- Chris Lawrence <lawrencc@debian.org>  Mon, 19 Mar 2007 17:14:06 -0500

reportbug (3.33) unstable; urgency=low

  * Fix French translation of man page.  (Closes: #404900)
  * Use text interface password input in urwid interface.
    (Closes: #398420)
  * Disable mouse reporting in urwid interface.  (Closes: #390465, #394477)
  * Don't check available version for configured but not installed packages.
    (Closes: #406150)
